--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,13 @@ body{
             margin: 20px;
         }
     /* FINE SECOND SECTION */
+    /* TESTIMONIALS SECTION */
+        #testimonials-section .col{
+            width: calc(100% - 40px);
+            height: 200px;
+            margin: 20px;
+        }
+    /* FINE TESTIMONIALS SECTION */
 /* FINE MAIN */
 
 /* LAYOUT */
