--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body{
             margin: 0 20px;
         }
     /* FINE HEADER COL */
+
     /* HEADER CONTENT */
         .header-content{
             display: flex;
@@ -41,6 +42,7 @@ body{
             margin: 20px;
         }
     /* FINE FIRST SECTION */
+
     /* SECOND SECTION */
         #second-section .col{
             width: calc(100% - 40px);
@@ -48,6 +50,7 @@ body{
             margin: 20px;
         }
     /* FINE SECOND SECTION */
+
     /* TESTIMONIALS SECTION */
         #testimonials-section .col{
             width: calc(100% - 40px);
@@ -55,6 +58,7 @@ body{
             margin: 20px;
         }
     /* FINE TESTIMONIALS SECTION */
+
     /* BENEFITS SECTION */
         #benefits-section .col{
             width: calc(100% - 40px);
@@ -62,6 +66,7 @@ body{
             margin: 20px;
         }
     /* FINE BENEFITS SECTION */
+
     /* ABOUT US SECTION */
         #about-us-section .col{
             width: calc(100% - 40px);
@@ -69,6 +74,7 @@ body{
             margin: 20px;
         }
     /* FINE ABOUT US SECTION */
+
     /* GET STARTED SECTION */
         #get-started-section .col{
             width: calc(100% - 40px);
@@ -77,6 +83,18 @@ body{
         }
     /* FINE GET STARTED SECTION */
 /* FINE MAIN */
+
+/* FOOTER */
+    footer{
+        background-color: #333333;
+    }
+
+    footer .col{
+        width: calc(100% - 40px);
+        height: 200px;
+        margin: 20px;
+    }
+/* FINE FOOTER */
 
 /* LAYOUT */
     .container{
@@ -93,6 +111,7 @@ body{
         border: 2px dashed black;
     }
 /* FINE LAYOUT */
+
 /* UTILITIES */
     .bgcolor-violet{
         background-color: #9792E4;
