--- a/css/style.css
+++ b/css/style.css
@@ -50,58 +50,104 @@ a{
         #first-section .col:last-child{
             margin-bottom: 80px;
         }
+        /* FIRST SECTION CONTENT */
+            .first-section-content{
+                padding: 20px 20px 0 20px;
+            }
 
-        .first-section-content{
-            padding: 20px 20px 0 20px;
-        }
+            .first-section-content p{
+                margin-top: 20px;
+                line-height: 1.7;
+            }
 
-        .first-section-content p{
-            margin-top: 20px;
-            line-height: 1.7;
-        }
+            .first-section-content a{
+                padding: 10px 50px;
+                border-radius: 20px;
+            }
 
-        .first-section-content a{
-            padding: 10px 50px;
-            border-radius: 20px;
-        }
+            .first-section-content a > i{
+                margin: 40px 0px;
+                padding-right: 5px;
+            }
 
-        .first-section-content a > i{
-            margin: 40px 0px;
-            padding-right: 5px;
-        }
+            .first-section-content img{
+                width: 100%;
+                position: relative;
+                top: 0.3rem;
+            }
+        /* FINE FIRST SECTION CONTENT */
 
-        .first-section-content img{
-            width: 100%;
-            position: relative;
-            top: 0.3rem;
-        }
+        /* FIRST SECTION CONTENT 2 */
+            .first-section-content-2{
+                display: flex;
+                flex-flow: column wrap;
+                align-items: center;
+            }
 
-        .first-section-content-2{
-            display: flex;
-            flex-flow: column wrap;
-            align-items: center;
-        }
+            .first-section-content-2 > i{
+                padding: 55px 0 40px;
+                font-size: 80px;
+            }
 
-        .first-section-content-2 > i{
-            padding: 55px 0 40px;
-            font-size: 80px;
-        }
+            .first-section-content-2 > h2{
+                margin-top: 25px;
+            }
 
-        .first-section-content-2 > h2{
-            margin-top: 25px;
-        }
-
-        .first-section-content-2 > p{
-            margin-bottom: 30px;
-        }
+            .first-section-content-2 > p{
+                margin-bottom: 30px;
+            }
+        /* FINE FIRST SECTION CONTENT 2 */
     /* FINE FIRST SECTION */
 
     /* SECOND SECTION */
         #second-section .col{
             width: calc(100% - 40px);
-            height: 200px;
             margin: 20px;
         }
+
+        #second-section .col:last-child{
+            margin-bottom: 60px;
+            border-radius: 50px;
+        }
+        /* SECOND SECTION CONTENT */
+            .second-section-content > img{
+                margin-top: 40px;
+                width: 100%;
+            }
+
+            .second-section-content > h2{
+                font-size: 32px;
+                margin: 60px 0 40px;
+            }
+
+            .second-section-content > p{
+                line-height: 1.7;
+            }
+        /* FINE SECOND SECTION CONTENT */
+
+        /* SECOND SECTION CONTENT 2 */
+            .second-section-content-2 > h3{
+                padding: 20px 0;
+                font-size: 25px;
+            }
+
+            .second-section-content-2 > p{
+                padding: 0 20px;
+                font-style: italic;
+            }
+
+            .second-section-content-2 > a{
+                width: 100px;
+                height: 100px;
+            }
+
+            .second-section-content-2 > a > i{
+                color: black;
+                margin: 25px 0;
+                padding: 13px 15px;
+                border-radius: 50%;
+            }
+        /* FINE SECOND SECTION CONTENT 2 */
     /* FINE SECOND SECTION */
 
     /* TESTIMONIALS SECTION */
@@ -177,6 +223,10 @@ a{
 
     .bgcolor-lightblue{
         background-color: #B5DDFF;
+    }
+
+    .bgcolor-white{
+        background-color: #FFFFFF;
     }
     /* FINE BGCOLOR */
 
