--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ a{
         }
 
         .testimonials-content > p.txt-white{
-            padding: 0 48px;
+            padding: 0 47px;
             margin-top: 15px;
         }
 
@@ -231,8 +231,42 @@ a{
     /* BENEFITS SECTION */
         #benefits-section .col{
             width: calc(100% - 40px);
-            height: 200px;
-            margin: 20px;
+            margin: 15px 20px;
+            border-radius: 25px;
+        }
+
+        #benefits-section .col:last-child{
+            margin-bottom: 65px;
+        }
+
+        #benefits-section h2{
+            font-size: 32px;
+            margin: 60px 0;
+        }
+
+        .benefits-content{
+            padding: 30px;
+        }
+
+        .benefits-content > span{
+            font-size: 50px;
+        }
+
+        .benefits-content > h3{
+            font-size: 22px;
+            padding: 20px 0;
+        }
+
+        .benefits-content > p{
+            line-height: 1.7;
+            padding-right: 2px;
+        }
+
+        .benefits-content > a{
+            display: inline-block;
+            border-radius: 20px;
+            margin: 25px 0 5px;
+            padding: 10px 52px;
         }
     /* FINE BENEFITS SECTION */
 
