[FEAT] contenuti main about us section

--- a/css/style.css
+++ b/css/style.css
@@ -273,8 +273,61 @@ a{
     /* ABOUT US SECTION */
         #about-us-section .col{
             width: calc(100% - 40px);
-            height: 200px;
             margin: 20px;
+        }
+
+        #about-us-section .col:last-child{
+           margin-bottom: 60px;
+        }
+
+        .about-us-content > h2:nth-child(1){
+            font-size: 40px;
+            margin: 40px 0 30px;
+        }
+
+        .about-us-content > h2:nth-child(2){
+            line-height: 1.5;
+            font-size: 28px;
+            margin: 20px 0;
+        }
+
+        .about-us-content > p{
+            line-height: 2.2;
+            padding-right: 30px;
+        }
+
+        .about-us-content > p:last-child{
+            margin-top: 40px;
+            padding-right: 35px;
+        }
+
+        .about-us-img{
+            width: 180px;
+            height: 180px;
+            border-radius: 50%;
+            background-image: url(../img/about.jpg);
+            background-position: center;
+            background-size: cover;
+            
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: flex-end;
+        }
+
+        .about-us-img > i{
+            font-size: 60px;
+            margin-top: 25px;
+        }
+
+        .about-us-content > a{
+            display: inline-block;
+            margin-bottom: 30px;
+            padding: 8px 15px;
+            border-radius: 25px;
+        }
+
+        .about-us-content > a > i{
+            margin-right: 10px;
         }
     /* FINE ABOUT US SECTION */
 
