[REFACTOR] correzione testimonial section content

--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,7 @@ a{
 
         .testimonials-content > span{
             display: block;
+            font-size: 15px;
             padding-top: 30px;
         }
 
